v1.1
first real usable version